--- a/docs/community/static/css/theme-white.css
+++ b/docs/community/static/css/theme-white.css
@@ -64,6 +64,10 @@ header .select-style select{
     z-index: 2;
 }
 
+#sidebar .leftMenu{
+    overflow-y: auto;
+}
+
 #header-wrapper{
     position:sticky;
     background-color: #fff;
@@ -446,6 +450,7 @@ table td,table td code{
         left:-300px;
         width: 300px;
         padding-left: 16px;
+        background-color: #fff;
     }
 
     .sidebar-hidden #body{
@@ -462,6 +467,22 @@ table td,table td code{
         transform: translateX(0);
     }
     .icon-3,.icon-2,.icon-1{display: none;}
+
+    .retro-theme #sidebar{
+        background-color: #F2EFDD;
+    }
+    .eyehelp-theme #sidebar{
+        background-color: #C7EBC9;
+    }
+    .haitian-theme #sidebar{
+        background-color: #E5EDFF;
+    }
+    .deep-theme #sidebar{
+        background-color: #15202F;
+    }
+    .dark-theme #sidebar{
+        background-color: #171717;
+    }
 }
 
 @keyframes mymove {
