--- a/docs/document/static/css/theme-white.css
+++ b/docs/document/static/css/theme-white.css
@@ -72,6 +72,10 @@ header .select-style select{
     z-index: 2;
 }
 
+#sidebar .leftMenu{
+    overflow-y: auto;
+}
+
 #header-wrapper{
     position:sticky;
     background-color: #fff;
@@ -465,6 +469,7 @@ table td,p,code{
         left:-300px;
         width: 300px;
         padding-left: 16px;
+        background-color: #fff;
     }
 
     .sidebar-hidden #body{
@@ -482,6 +487,21 @@ table td,p,code{
     }
     .icon-3,.icon-2,.icon-1{display: none;}
 
+    .retro-theme #sidebar{
+        background-color: #F2EFDD;
+    }
+    .eyehelp-theme #sidebar{
+        background-color: #C7EBC9;
+    }
+    .haitian-theme #sidebar{
+        background-color: #E5EDFF;
+    }
+    .deep-theme #sidebar{
+        background-color: #15202F;
+    }
+    .dark-theme #sidebar{
+        background-color: #171717;
+    }
 }
 
 @keyframes mymove {
@@ -548,7 +568,7 @@ table td,p,code{
 .retro-theme th{
     background-color: #F8F5EA;
 }
-.eyehelp-theme table,.retro-theme td,.retro-theme blockquote{
+.retro-theme table,.retro-theme td,.retro-theme blockquote{
     border-color: #dfdcdc;
 }
 /*eyehelp*/
