Fix h3 too large in community documents (#18448)

--- a/docs/community/static/css/theme-white.css
+++ b/docs/community/static/css/theme-white.css
@@ -319,6 +319,11 @@ h2:first-of-type{
     margin-top:0;
 }
 
+h3{
+    text-align: left;
+    font-size: 1.2rem;
+}
+
 table{
     table-layout: fixed;
 }
